kubernetes/apps/media-server/clamav/app/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: clamav
  labels:
    app.kubernetes.io/name: clamav
spec:
  selector:
    app.kubernetes.io/name: clamav
  ports:
    - name: metrics
      port: 9090
      targetPort: metrics
    - name: clamd
      port: 3310
      targetPort: clamd
    - name: browser
      port: 8080
      targetPort: browser
