kubernetes/apps/media-server/clamav/app/httproute.yaml
---
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/name: "Quarantaine"
    gethomepage.dev/group: "Média"
    gethomepage.dev/icon: "https://cdn.jsdelivr.net/gh/homarr-labs/dashboard-icons/svg/clamav.svg"
    gethomepage.dev/href: "https://quarantaine.${DOMAIN}"
  name: quarantine
spec:
  parentRefs:
    - name: envoy-internal
      namespace: network
      sectionName: https
  hostnames:
    - quarantaine.${DOMAIN}
  rules:
    - backendRefs:
        - name: clamav
          namespace: media-server
          port: 8080
